# cooley-tukey-filter

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: specification-document.md  user-manual.md  weekly-report-1.md  weekly-report-2.md  weekly-report-3.md  weekly-report-4.md  weekly-report-5.md  weekly-report-6.md
src/: main.cpp
src/include/: dft.hpp  fft.hpp  filter.hpp  io.hpp  wavtools.hpp
tests/: test.cpp
